syntax = "proto3";
 
option csharp_namespace = "GPNA.WebApiSender";
 
package greet;
 
// определение сервиса -сервера  кто отвечает клиенту
service GreeterServerStream {
  // который получает сообщение HelloRequest
  // и отправляет сообщение HelloReply
  //контракт на коммуникации
  rpc SayHello1 (HelloRequest) returns (stream HelloReply);
}
 
// То есть это те данные, которые мы получаем от клиента
//Для передачи данных в Protobuf используются сообщения.
// уникальный номер для идентификации каждого поля при сериализации сообщения
message HelloRequest {
}
 
// Это те данные, которые мы посылаем клиенту в ответ
message HelloReply {
  string message = 1;
}
//Сервис может содержать множество функций, но стоит учитывать, что она обязательно должно принимать какое-то сообщение и возвращать какое-нибудь сообщения. Но при необходимости можно создавать также пустые сообщения